fix: width overflow

--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -7,7 +7,6 @@ body {
 .top-bar {
     background-color: #454851;
     padding: 20px;
-    width: 100%;
     height: 40px;
     color: white;
     bottom: 0;
